--- a/GUI.ui
+++ b/GUI.ui
@@ -853,7 +853,7 @@
                       <rect>
                        <x>0</x>
                        <y>0</y>
-                       <width>369</width>
+                       <width>348</width>
                        <height>198</height>
                       </rect>
                      </property>
@@ -982,8 +982,8 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>769</width>
-                    <height>211</height>
+                    <width>98</width>
+                    <height>43</height>
                    </rect>
                   </property>
                   <layout class="QGridLayout" name="gridLayout_41">
@@ -1124,7 +1124,7 @@
            <item row="0" column="0">
             <widget class="QStackedWidget" name="stackedWidget_3">
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <widget class="QWidget" name="page_8">
               <layout class="QGridLayout" name="gridLayout_15">
@@ -1488,6 +1488,12 @@
                </item>
                <item row="0" column="0" rowspan="2">
                 <widget class="QLabel" name="label_7">
+                 <property name="minimumSize">
+                  <size>
+                   <width>795</width>
+                   <height>550</height>
+                  </size>
+                 </property>
                  <property name="text">
                   <string/>
                  </property>
