--- a/style.qss
+++ b/style.qss
@@ -1,17 +1,17 @@
-/* ======= Sidebar ======= */
+/* Sidebar */
 #icon_widget, #widget_2 {
     background-color: #e0e0e0;
     border-right: 2px solid #999;
     padding-right: 10px;
 }
 
-/* ======= Верхня панель ======= */
+/* Верхня панель */
 #widget {
     background-color: #e0e0e0;
     border-bottom: 2px solid #999;
 }
 
-/* ======= Stack Pages ======= */
+/* Stack Pages */
 QStackedWidget {
     background-color: #ffffff;
     border: 2px solid #999;
